# csharp-compiler-rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  check_output.txt  compile_output.txt  final_errors.txt  fix_unwraps.py  rebuild.bat  rebuild.ps1  remaining_errors.txt  showcase_components.bat  test_compiler_direct.rs  test_lexer.rs  test_parser_simple.rs
.claude/: settings.local.json
docs/: STANDARD_LIBRARY.md
examples/: advanced_test.cs  demo_compilation.bat  demo_compilation.sh  generics_test.cs  hello.cs  lex_hello.rs  showcase.cs  simple_test.cs  test_stdlib.cs
src/: assembly_loader.rs  compiler.rs  lib.rs  main.rs
src/.claude/: settings.local.json
src/codegen/: emitter.rs  il.rs  metadata.rs  mod.rs  optimization.rs  pe.rs
src/compilation/: mod.rs
src/diagnostics/: mod.rs
src/emit/: mod.rs
src/lexer/: keywords.rs  mod.rs  operators.rs  token.rs  trivia.rs
src/parser/: declarations.rs  expressions.rs  mod.rs  statements.rs  types.rs
src/semantic/: binding.rs  flow_analysis.rs  generics.rs  mod.rs  overload_resolution.rs  symbols.rs  type_checker.rs  types.rs
src/syntax/: kind.rs  mod.rs  node.rs  tree.rs  visitor.rs
src/workspace/: mod.rs
tests/: basic_test.rs  integration_test.rs  integration_tests.rs  parser_tests.rs  semantic_tests.rs
