[package]
name = "csharp_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Rust CSharp Compiler Contributors"]
description = "A C# compiler written in Rust, inspired by Roslyn"
license = "MIT"

[dependencies]
# Lexing and parsing
logos = "0.14"
rowan = "0.15"
text-size = "1.1"
smol_str = "0.2"
once_cell = "1.19"

# Error handling and diagnostics
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
anyhow = "1.0"

# Data structures
indexmap = "2.0"
petgraph = "0.6"
rustc-hash = "1.1"

# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code generation
# inkwell = { version = "0.4", features = ["llvm17-0"] }  # Disabled until LLVM is installed

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.8"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
insta = "1.34"
proptest = "1.4"

# Benchmarks disabled for now
# [[bench]]
# name = "lexer"
# harness = false

[profile.release]
lto = true
codegen-units = 1